# Process this file with automake to produce Makefile.in
#
# Copyright (C) 2001, 2002 Rob Caelers <robc@krandor.org>
#
# Time-stamp: <2002-09-06 22:33:05 robc>
#
# $Id$
#

MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = $(GUI_DIRS)

#noinst_LIBRARIES = libgui.a
#
#libgui_a_SOURCES = \
#	BreakControl.cc \
#	GenericGUI.cc
#
#libgui_a_LIBADD = 
#
#libgui_a_CXXFLAGS 	= -DDATADIR="\"${pkgdatadir}\"" -W @ARCH_CFLAGS@ -I$(top_srcdir)/src \
#			   -D_XOPEN_SOURCE=600
#
#libgui_a_CFLAGS		= -DDATADIR="\"${pkgdatadir}\"" -W @ARCH_CFLAGS@ -I$(top_srcdir)/src \
#			   -D_XOPEN_SOURCE=600
#
#EXTRA_DIST = $(wildcard *.hh) $(wildcard *.h)  $(wildcard *.icc)
