# Process this file with automake to produce Makefile.in
#
# Copyright (C) 2001, 2002 Rob Caelers <robc@krandor.org>
#
#
# $Id$
#

MAINTAINERCLEANFILES = Makefile.in

imagesdir = $(pkgdatadir)/images

images_DATA = \
	timer-daily.png \
	timer-micropause.png \
	timer-restbreak.png \
	micropause.png

EXTRA_DIST = ${images_DATA}