# Process this file with automake to produce Makefile.in
#
# Copyright (C) 2001, 2002 Rob Caelers <robc@krandor.org>
#
#
# $Id$
#

MAINTAINERCLEANFILES = Makefile.in

imagesdir = $(pkgdatadir)/images
images_DATA = $(wildcard *.png) $(wildcard *.ico)

iconsdir = $(datadir)/pixmaps/workrave
icons_DATA = workrave-icon-small.png

EXTRA_DIST = ${images_DATA}