add_subdirectory(utils)
add_subdirectory(config)
if (HAVE_HARPOON)
  add_subdirectory(hooks)
endif()
add_subdirectory(input-monitor)
add_subdirectory(audio)
add_subdirectory(dbus)
add_subdirectory(updater)
add_subdirectory(session)
add_subdirectory(corenext)
add_subdirectory(core)
if (HAVE_CORE_SHADOW)
  add_subdirectory(core-shadow)
endif()
add_subdirectory(crash)
